apps/immich/immich-ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: immich
spec:
  selector:
    app: immich-ml
  ports:
  - name: immich-ml
    port: 3001
    targetPort: 3001
    protocol: TCP
