apps/immich/immich-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-proxy
  namespace: immich
spec:
  selector:
    app: immich-proxy
  ports:
  - name: immich-proxy
    port: 8080
    targetPort: 8080
    protocol: TCP
