apps/immich/immich-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
  - name: immich-server
    port: 3001
    targetPort: 3001
    protocol: TCP
