apps/immich/immich-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-web
  namespace: immich
spec:
  selector:
    app: immich-web
  ports:
  - name: immich-web
    port: 3000
    targetPort: 3000
    protocol: TCP
