apps/immich/immich-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  namespace: immich
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: immich-auth@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - immich.lab.emc2.build
    secretName: immich-tls
  rules:
  - host: immich.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: immich-web
            port:
              number: 3000
        path: /
        pathType: Prefix
